--- a/packages/line_detector/config/line_detector_node/default.yaml
+++ b/packages/line_detector/config/line_detector_node/default.yaml
@@ -1,6 +1,13 @@
 img_size: [120,160]
 top_cutoff: 40
 
+# Enhanced detection parameters
+adaptive_threshold_enabled: true
+temporal_filtering_enabled: true
+adaptation_rate: 0.1
+temporal_history_size: 5
+consistency_threshold: 0.7
+
 colors:
   RED:
     low_1: [0,140,100]
