--- a/packages/vehicle_detection/package.xml
+++ b/packages/vehicle_detection/package.xml
@@ -2,7 +2,7 @@
 <package>
   <name>vehicle_detection</name>
   <version>1.0.0</version>
-  <description>TODO: Add a description of package `vehicle_detection` in `package.xml`.</description>
+  <description>Enhanced vehicle detection package with YOLOv5-based object detection for Duckietown environments. Provides real-time detection of duckies, duckiebots, traffic cones, and other objects with comprehensive performance monitoring and risk assessment.</description>
 
   <maintainer email="mack@duckietown.org">Mack</maintainer>
   <author email="atacchet@todo.todo">Andrea Tacchetti</author>
@@ -15,6 +15,7 @@
   <build_depend>duckietown_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
+  <build_depend>std_msgs</build_depend>
   <build_depend>image_processing</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
@@ -22,9 +23,20 @@
   <run_depend>duckietown_msgs</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>sensor_msgs</run_depend>
+  <run_depend>std_msgs</run_depend>
   <run_depend>image_processing</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
+  
+  <!-- Enhanced vehicle detection dependencies -->
+  <build_depend>python3-torch</build_depend>
+  <build_depend>python3-ultralytics</build_depend>
+  <build_depend>python3-scipy</build_depend>
+  <build_depend>python3-psutil</build_depend>
+  <run_depend>python3-torch</run_depend>
+  <run_depend>python3-ultralytics</run_depend>
+  <run_depend>python3-scipy</run_depend>
+  <run_depend>python3-psutil</run_depend>
 
 
 
