--- a/configurations.yaml
+++ b/configurations.yaml
@@ -1,3 +1,361 @@
 version: '1.0'
 
-configurations: {}
+# Enhanced configuration management for Advanced Autonomous Duckietown System
+configurations:
+  
+  # Global deployment settings
+  deployment:
+    default_user: "duckie"
+    default_port: 22
+    timeout: 300
+    retry_count: 3
+    health_check_timeout: 60
+    
+  # Build system configuration
+  build:
+    default_arch: "arm64"
+    default_distro: "daffy"
+    supported_archs: ["amd64", "arm64"]
+    supported_distros: ["daffy"]
+    docker_registry: "docker.io"
+    image_name: "duckietown/dt-core"
+    
+  # System monitoring configuration
+  monitoring:
+    log_level: "INFO"
+    log_rotation: true
+    max_log_size: "100MB"
+    max_log_files: 10
+    performance_monitoring: true
+    health_check_interval: 30
+    
+  # Advanced autonomous system configuration
+  autonomous_system:
+    # Lane following parameters
+    lane_following:
+      lateral_deviation_threshold: 0.05  # meters
+      heading_error_threshold: 0.1       # radians
+      adaptive_threshold_enabled: true
+      temporal_consistency_enabled: true
+      
+    # Object detection parameters
+    object_detection:
+      confidence_threshold: 0.6
+      nms_threshold: 0.4
+      max_detections: 10
+      inference_device: "cpu"  # or "gpu" if available
+      
+    # AprilTag detection parameters
+    apriltag_detection:
+      multi_resolution_enabled: true
+      distance_estimation_enabled: true
+      false_positive_filtering: true
+      target_stop_distance: 0.3  # meters
+      
+    # Safety monitoring parameters
+    safety:
+      emergency_stop_enabled: true
+      collision_avoidance_enabled: true
+      hardware_monitoring_enabled: true
+      sensor_validation_enabled: true
+      
+    # Navigation parameters
+    navigation:
+      lane_change_enabled: true
+      dynamic_avoidance_enabled: true
+      predictive_control_enabled: true
+      coordination_enabled: true
+      
+  # Robot-specific overrides (can be customized per robot)
+  robot_defaults:
+    # Default calibration parameters
+    calibration:
+      camera_matrix: [[320, 0, 160], [0, 320, 120], [0, 0, 1]]
+      distortion_coeffs: [0, 0, 0, 0, 0]
+      camera_height: 0.1  # meters
+      camera_angle: 0.0   # radians
+      
+    # Default hardware parameters
+    hardware:
+      wheel_baseline: 0.1  # meters
+      wheel_radius: 0.0318 # meters
+      max_linear_velocity: 0.5   # m/s
+      max_angular_velocity: 2.0  # rad/s
+      
+    # Default network parameters
+    network:
+      ros_master_port: 11311
+      rosbridge_port: 9090
+      camera_port: 8080
+      
+  # Development and testing configuration
+  development:
+    debug_mode: false
+    verbose_logging: false
+    test_mode: false
+    simulation_mode: false
+    mock_hardware: false
+    
+  # Performance optimization configuration
+  performance:
+    cpu_optimization: true
+    memory_optimization: true
+    gpu_acceleration: false  # Enable if GPU available
+    parallel_processing: true
+    cache_optimization: true
+    
+  # Enhanced system integration configuration
+  integration:
+    # Component startup sequencing
+    startup_sequence:
+      phase1_timeout: 30  # Core infrastructure startup
+      phase2_timeout: 45  # Perception layer startup
+      phase3_timeout: 30  # Control layer startup
+      phase4_timeout: 20  # Safety and coordination startup
+      phase5_timeout: 15  # Integration and monitoring startup
+      total_timeout: 180  # Total system startup timeout
+      
+    # Dependency management
+    dependencies:
+      enable_dependency_checking: true
+      dependency_timeout: 10.0
+      max_dependency_retries: 3
+      dependency_check_interval: 2.0
+      
+    # Component health monitoring
+    health_monitoring:
+      enable_component_health_checks: true
+      health_check_interval: 5.0
+      component_timeout: 3.0
+      max_health_failures: 5
+      enable_auto_recovery: true
+      
+    # System coordination
+    coordination:
+      enable_master_coordinator: true
+      coordination_timeout: 30.0
+      integration_check_frequency: 2.0
+      enable_conflict_resolution: true
+      
+  # Enhanced lane following system configuration
+  enhanced_lane_following:
+    # Adaptive threshold detection
+    adaptive_detection:
+      enable_adaptive_thresholds: true
+      lighting_adaptation_rate: 0.1
+      threshold_update_frequency: 5.0
+      min_threshold: 50
+      max_threshold: 200
+      
+    # Temporal consistency filtering
+    temporal_filtering:
+      enable_temporal_consistency: true
+      consistency_window_size: 5
+      consistency_threshold: 0.7
+      temporal_weight_decay: 0.9
+      
+    # Polynomial curve fitting
+    curve_fitting:
+      enable_curve_fitting: true
+      polynomial_degree: 3
+      fitting_window_size: 20
+      curve_extrapolation_distance: 1.0
+      fitting_confidence_threshold: 0.8
+      
+    # Predictive control (MPC)
+    predictive_control:
+      enable_mpc: true
+      prediction_horizon: 10
+      control_horizon: 5
+      mpc_frequency: 20.0
+      optimization_tolerance: 1e-6
+      max_iterations: 100
+      
+  # Enhanced AprilTag detection configuration
+  enhanced_apriltag:
+    # Multi-resolution detection
+    multi_resolution:
+      enable_multi_resolution: true
+      scale_factors: [0.5, 0.75, 1.0, 1.25, 1.5]
+      min_detection_size: 20
+      max_detection_size: 200
+      
+    # Distance estimation
+    distance_estimation:
+      enable_distance_estimation: true
+      tag_size: 0.065  # meters
+      estimation_method: "pnp"
+      distance_filter_alpha: 0.3
+      
+    # Precision stop control
+    precision_stop:
+      enable_precision_stop: true
+      target_stop_distance: 0.3  # meters
+      deceleration_start_distance: 1.0  # meters
+      stop_duration: 2.0  # seconds
+      stop_tolerance: 0.1  # meters
+      max_deceleration: 2.0  # m/s²
+      
+  # YOLO object detection configuration
+  yolo_detection:
+    # Model configuration
+    model:
+      model_path: "yolov5s.pt"
+      confidence_threshold: 0.6
+      nms_threshold: 0.4
+      max_detections: 10
+      input_size: 640
+      
+    # Performance optimization
+    optimization:
+      enable_tensorrt: false  # Enable if TensorRT available
+      enable_half_precision: false
+      batch_size: 1
+      max_inference_time: 0.05  # seconds
+      
+    # Risk assessment
+    risk_assessment:
+      enable_risk_assessment: true
+      collision_time_threshold: 3.0  # seconds
+      safe_distance_threshold: 0.5  # meters
+      risk_update_frequency: 10.0  # Hz
+      
+    # Avoidance strategies
+    avoidance:
+      enable_avoidance: true
+      avoidance_strategies: ["stop", "slow", "swerve"]
+      default_strategy: "slow"
+      strategy_selection_timeout: 0.1  # seconds
+      
+  # Dynamic lane changing configuration
+  lane_changing:
+    # Decision engine
+    decision_engine:
+      enable_lane_changing: true
+      gap_analysis_distance: 2.0  # meters
+      safety_margin: 0.5  # meters
+      decision_frequency: 2.0  # Hz
+      
+    # Trajectory generation
+    trajectory:
+      lane_change_duration: 3.0  # seconds
+      max_lateral_acceleration: 2.0  # m/s²
+      trajectory_smoothness_factor: 0.8
+      polynomial_degree: 5
+      
+    # Intention signaling
+    signaling:
+      enable_led_signaling: true
+      signal_duration: 1.0  # seconds before maneuver
+      signal_frequency: 2.0  # Hz
+      abort_signal_duration: 0.5  # seconds
+      
+  # Comprehensive safety monitoring configuration
+  safety_monitoring:
+    # Multi-layer safety
+    layers:
+      enable_hardware_monitoring: true
+      enable_sensor_monitoring: true
+      enable_algorithm_monitoring: true
+      enable_behavioral_monitoring: true
+      
+    # Hardware monitoring
+    hardware:
+      cpu_warning_threshold: 80.0  # percent
+      cpu_critical_threshold: 95.0  # percent
+      memory_warning_threshold: 80.0  # percent
+      memory_critical_threshold: 95.0  # percent
+      temperature_warning_threshold: 70.0  # celsius
+      temperature_critical_threshold: 85.0  # celsius
+      
+    # Sensor monitoring
+    sensors:
+      camera_timeout_threshold: 2.0  # seconds
+      imu_timeout_threshold: 1.0  # seconds
+      encoder_timeout_threshold: 1.0  # seconds
+      sensor_validation_frequency: 5.0  # Hz
+      
+    # Emergency response
+    emergency:
+      enable_emergency_stop: true
+      emergency_stop_timeout: 0.2  # seconds
+      emergency_led_pattern: "fast_blink_red"
+      auto_recovery_enabled: true
+      recovery_delay: 5.0  # seconds
+      max_recovery_attempts: 3
+      
+  # Intelligent coordination configuration
+  coordination:
+    # Behavior arbitration
+    arbitration:
+      enable_behavior_arbitration: true
+      arbitration_strategy: "safety_first"
+      max_decision_time: 0.5  # seconds
+      conflict_resolution_timeout: 1.0  # seconds
+      
+    # State management
+    state_management:
+      enable_state_persistence: true
+      state_persistence_path: "/tmp/fsm_state.pkl"
+      enable_state_validation: true
+      validation_frequency: 2.0  # Hz
+      
+    # Performance optimization
+    performance_optimization:
+      enable_dynamic_optimization: true
+      optimization_frequency: 1.0  # Hz
+      cpu_load_balancing: true
+      adaptive_quality_control: true
+      frame_skipping_threshold: 0.8  # CPU usage
+      
+  # System validation and testing configuration
+  validation:
+    # Integration testing
+    integration_tests:
+      enable_continuous_validation: true
+      validation_frequency: 0.1  # Hz
+      component_timeout: 5.0  # seconds
+      integration_timeout: 10.0  # seconds
+      max_validation_failures: 5
+      
+    # Performance benchmarking
+    benchmarking:
+      enable_performance_benchmarking: true
+      benchmark_frequency: 0.05  # Hz
+      fps_target: 20.0
+      latency_target: 0.2  # seconds
+      memory_target: 2048  # MB
+      
+    # Safety validation
+    safety_validation:
+      enable_safety_testing: true
+      emergency_stop_test_frequency: 0.01  # Hz
+      collision_avoidance_test_frequency: 0.02  # Hz
+      sensor_failure_simulation: false
+      
+  # Logging and monitoring configuration
+  logging:
+    # Comprehensive logging
+    comprehensive:
+      enable_comprehensive_logging: true
+      log_level: "INFO"
+      log_rotation: true
+      max_log_size: "100MB"
+      max_log_files: 10
+      
+    # Component-specific logging
+    components:
+      log_perception_events: true
+      log_control_commands: true
+      log_safety_events: true
+      log_coordination_decisions: true
+      log_integration_events: true
+      log_performance_metrics: true
+      
+    # Real-time monitoring
+    monitoring:
+      enable_real_time_monitoring: true
+      monitoring_frequency: 1.0  # Hz
+      enable_performance_alerts: true
+      enable_safety_alerts: true
+      enable_integration_alerts: true
