--- a/packages/ground_projection/package.xml
+++ b/packages/ground_projection/package.xml
@@ -19,7 +19,7 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>duckietown_msgs</build_depend>
   <build_depend>yaml-cpp</build_depend>
-  <build_depend>image_geometry</build_depend>
+  <!-- <build_depend>image_geometry</build_depend> -->
 
   <run_depend>cv_bridge</run_depend>
   <run_depend>image_transport</run_depend>
@@ -31,6 +31,6 @@
   <run_depend>duckietown_msgs</run_depend>
   <run_depend>message_runtime</run_depend>
   <run_depend>yaml-cpp</run_depend>
-  <run_depend>image_geometry</run_depend>
+  <!-- <run_depend>image_geometry</run_depend> -->
 
 </package>
