--- a/packages/duckietown_demos/package.xml
+++ b/packages/duckietown_demos/package.xml
@@ -8,4 +8,6 @@
   <license>GPLv3</license>
 
   <buildtool_depend>catkin</buildtool_depend> 
+  <build_depend>duckietown_enhanced_msgs</build_depend>
+  <run_depend>duckietown_enhanced_msgs</run_depend>
 </package>
