--- a/packages/vehicle_detection/package.xml
+++ b/packages/vehicle_detection/package.xml
@@ -12,7 +12,7 @@
 
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>cv_bridge</build_depend>
-  <build_depend>duckietown_msgs</build_depend>
+  <build_depend>duckietown_enhanced_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
@@ -20,7 +20,7 @@
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
   <run_depend>cv_bridge</run_depend>
-  <run_depend>duckietown_msgs</run_depend>
+  <run_depend>duckietown_enhanced_msgs</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>std_msgs</run_depend>
