--- a/packages/advanced_lane_detection/CMakeLists.txt
+++ b/packages/advanced_lane_detection/CMakeLists.txt
@@ -7,6 +7,7 @@ find_package(catkin REQUIRED COMPONENTS
   sensor_msgs
   geometry_msgs
   cv_bridge
+  duckietown_enhanced_msgs
   # message_generation  # Commented out since no messages defined
 )
 
@@ -23,5 +24,15 @@ find_package(catkin REQUIRED COMPONENTS
 # )
 
 catkin_package(
-  CATKIN_DEPENDS rospy std_msgs sensor_msgs geometry_msgs cv_bridge # message_runtime
+  CATKIN_DEPENDS rospy std_msgs sensor_msgs geometry_msgs cv_bridge duckietown_enhanced_msgs # message_runtime
+)
+
+# Enable Python packaging conventions
+catkin_python_setup()
+
+# Install Python nodes
+catkin_install_python(
+  PROGRAMS
+    src/advanced_lane_detector.py
+  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
