--- a/packages/advanced_lane_detection/package.xml
+++ b/packages/advanced_lane_detection/package.xml
@@ -9,12 +9,12 @@
   
   <buildtool_depend>catkin</buildtool_depend>
   
-  <build_depend>message_generation</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>cv_bridge</build_depend>
+  <build_depend>duckietown_enhanced_msgs</build_depend>
   
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
@@ -22,12 +22,12 @@
   <build_export_depend>geometry_msgs</build_export_depend>
   <build_export_depend>cv_bridge</build_export_depend>
   
-  <exec_depend>message_runtime</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>cv_bridge</exec_depend>
+  <exec_depend>duckietown_enhanced_msgs</exec_depend>
   
   <export></export>
 </package>
