--- a/packages/navigation/CMakeLists.txt
+++ b/packages/navigation/CMakeLists.txt
@@ -5,6 +5,7 @@ find_package(catkin REQUIRED COMPONENTS
   rospy
   std_msgs
   message_generation
+  geometry_msgs
   duckietown_msgs
 
 ## -- UNCOMMENT BELOW LINE FOR LAPTOP BUILD -- ##
@@ -24,6 +25,7 @@ add_service_files(
 generate_messages(
   DEPENDENCIES
   std_msgs
+  geometry_msgs
   duckietown_msgs
 )
 
@@ -31,7 +33,7 @@ generate_messages(
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES navigation
-  CATKIN_DEPENDS message_runtime
+  CATKIN_DEPENDS message_runtime std_msgs geometry_msgs duckietown_msgs
 #  DEPENDS system_lib
 )
 
