Image Rectification Fixing

--- a/src/packages/apriltag/package.xml
+++ b/src/packages/apriltag/package.xml
@@ -54,13 +54,16 @@
   <build_depend>sensor_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>duckietown_msgs</build_depend>
+  <build_depend>image_geometry</build_depend>
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>duckietown_msgs</build_export_depend>
+  <build_export_depend>image_geometry</build_export_depend>
   <exec_depend>rospy</exec_depend>
   <build_depend>cv_bridge</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <exec_depend>duckietown_msgs</exec_depend>
+  <exec_depend>image_geometry</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
