--- a/src/packages/image_processing/package.xml
+++ b/src/packages/image_processing/package.xml
@@ -15,6 +15,7 @@
   <build_depend>cv_bridge</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
+  <build_depend>image_geometry</build_depend>
 
   <run_depend>duckietown_msgs</run_depend>
   <run_depend>sensor_msgs</run_depend>
@@ -22,6 +23,7 @@
   <run_depend>cv_bridge</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
+  <run_depend>image_geometry</run_depend>
 
   <export>
   </export>
