--- a/src/packages/vehicle_detection/package.xml
+++ b/src/packages/vehicle_detection/package.xml
@@ -17,6 +17,7 @@
   <build_depend>sensor_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>image_processing</build_depend>
+  <build_depend>image_geometry</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
   <run_depend>cv_bridge</run_depend>
@@ -25,6 +26,7 @@
   <run_depend>sensor_msgs</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>image_processing</run_depend>
+  <run_depend>image_geometry</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
   
