--- a/src/packages/duckietown_msgs/package.xml
+++ b/src/packages/duckietown_msgs/package.xml
@@ -9,7 +9,16 @@
 
   <buildtool_depend>catkin</buildtool_depend>
   
-  <!-- In overlay, do not generate messages to avoid conflicts. Keep only catkin. -->
+  <!-- Build and run dependencies for messages/services -->
+  <build_depend>message_generation</build_depend>
+  <build_depend>std_msgs</build_depend>
+  <build_depend>geometry_msgs</build_depend>
+  <build_depend>sensor_msgs</build_depend>
+
+  <exec_depend>message_runtime</exec_depend>
+  <exec_depend>std_msgs</exec_depend>
+  <exec_depend>geometry_msgs</exec_depend>
+  <exec_depend>sensor_msgs</exec_depend>
 
   <export>
   </export>
