msgs: add LanePose, WheelsCmdStamped; fix Segment/SegmentList schema (color constants, pixels_normalized, points, normal); extend StopLineReading fields; include in CMake

--- a/src/packages/duckietown_msgs/CMakeLists.txt
+++ b/src/packages/duckietown_msgs/CMakeLists.txt
@@ -16,9 +16,11 @@ add_message_files(
   AprilTagDetectionArray.msg
     BoolStamped.msg
     FSMState.msg
+  LanePose.msg
     Segment.msg
     SegmentList.msg
     Twist2DStamped.msg
+  WheelsCmdStamped.msg
     StopLineReading.msg
     LEDPattern.msg
     AntiInstagramThresholds.msg
